<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_user"
        android:key="user"
        >

        <Preference
            android:key="pref_login"
            android:title="@string/title_login"
            />

        <Preference
            android:key="pref_sync"
            android:title="@string/title_sync"
            android:enabled="false"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_more"
        >

        <Preference
            android:title="@string/title_about"
            android:summary="V2EX Daily 是 V2EX 的第三方客户端"
            />

        <Preference
            android:key="pref_contact"
            android:title="@string/title_contact"
            android:summary="@string/title_contact_summary"
            />

        <Preference
            android:key="pref_maintainer"
            android:title="@string/title_maintainer"
            android:summary="@string/title_maintainer_summary"
            />

        <Preference
            android:key="pref_check_update"
            android:title="@string/title_update"
            />

    </PreferenceCategory>

</PreferenceScreen>